feat: Overhaul settings UI, update plugin metadata, and package final release